@@ -225,8 +225,7 @@ int ap_process_child_status(apr_proc_t *pid, apr_exit_why_e why, int status)
             ap_log_error(APLOG_MARK, APLOG_ALERT,
                          0, ap_server_conf,
                          "Child %" APR_PID_T_FMT
-                         " returned a Fatal error..." APR_EOL_STR
-                         "Apache is exiting!",
+                         " returned a Fatal error... Apache is exiting!",
                          pid->pid);
             return APEXIT_CHILDFATAL;
         }
