@@ -1,5 +1,9 @@
 Changes with Apache 2.0.54
 
+  *) Remove formatting characters from ap_log_error() calls.  These
+     were escaped as fallout from CAN-2003-0020.
+     [Eric Covener <ecovener gmail.com>]
+
   *) mod_ssl: If SSLUsername is used, set r->user earlier.  PR 31418.
      [David Reid]
 
